--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
 
   /* Add your custom configuration here. */
   "compilerOptions": {
-    "strict": false
+    "strict": false,
+    "target": "ESNext",
+    "module": "ESNext",
+    "baseUrl": ".",
+    "paths": {
+        "@/*": ["assets/*"],
+      },
   }
 }
