--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,6 +1,7 @@
 {
   "__version__": "1.0.6",
   "script": {
-    "importMap": "project://import-map.json"
+    "importMap": "project://import-map.json",
+    "loose": false
   }
 }
