--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,5 +3,6 @@
   "script": {
     "importMap": "project://import-map.json",
     "loose": false
-  }
+  },
+  "custom_joint_texture_layouts": []
 }
