--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,18 +1,17 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Cocos Creator compile",
-            "command": "curl",
-            "args": [
-                "http://localhost:7456/asset-db/refresh"
-            ],
-            "type": "shell",
-            "isBackground": true,
-            "group": "build",
-            "presentation": {
-                "reveal": "always"
-            }
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "CocosCreator compile",
+      "command": "curl",
+      "args": ["http://localhost:7456/asset-db/refresh"],
+      "type": "shell",
+      "isBackground": true,
+      "group": "build",
+      "presentation": {
+        "reveal": "never",
+        "panel": "shared"
+      }
+    }
+  ]
 }
